# todoapp

./: README.md  docker-compose.yml
.github/workflows/: api_lint.yml  checks.yml  main.yml  ui_lint.yml
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  gunicorn_conf.py  install.cmd  pyproject.toml  run.cmd
api/.github/workflows/: checks.yml
api/app/: main.py
api/app/core/: config.py
api/app/database/: base_store.py  todo_store.py  user_store.py
api/app/models/: todo_list.py  todo_user.py  user.py
api/app/pubsub/: pubsub.py
api/todoapi/app/: main.py
discordapp/: .gitignore  database.py  pyproject.toml
discordapp/discordapp/: database.py  main.py
ui/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json  rollup.config.js  tailwind.config.js
ui/.husky/: pre-commit
ui/src/: App.svelte  Home.svelte  TodoList.svelte  constants.js
ui/src/components/: H1.svelte  HeaderBar.svelte  ListHistory.svelte  SubHeader.svelte
