[tool.poetry]
name = "todoapp-api"
version = "0.1.0"
description = ""
authors = ["tha23rd"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.66.0"
pre-commit = "^2.13.0"
rethinkdb = "^2.4.8"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
python-socketio = "^5.3.0"
discord = "^1.7.3"
discord-py-slash-command = "^2.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

